--- a/MusicBot-0.3.6/src/main/resources/reference.conf
+++ b/MusicBot-0.3.6/src/main/resources/reference.conf
@@ -14,7 +14,7 @@
 // If you don't know how to get a bot token, please see the guide here:
 // https://github.com/jagrosh/MusicBot/wiki/Getting-a-Bot-Token
 
-token = BOT_TOKEN_HERE
+token = "OTA0Mzc1MTg3ODUwNTM0OTIy.YX6nBw.xgIwRD06vUBcEfiDxreJZLUia3o"
 
 
 // This sets the owner of the bot
@@ -29,7 +29,7 @@ owner = 0 // OWNER ID
 // If you use !!, the play command will be !!play
 // If you do not set this, the prefix will be a mention of the bot (@Botname play)
 
-prefix = "@mention"
+prefix = ">"
 
 
 // If you set this, it modifies the default game of the bot
